# babs-ecs

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  dependencies.cmake
src/: Component.hpp  ECS.hpp  ECSManager.hpp  ECSManager_tests.cpp  Entity.hpp  Entity_tests.cpp  Events.hpp  Exceptions.hpp  Manager.hpp  babs_ecs.hpp  babs_ecs_tests.cpp  benchmark.cpp  bitfield.hpp  bitfield_tests.cpp  main.cpp  manager_tests.cpp  tests.cpp
src/bitfield/: bitfield.hpp  bitfield_tests.cpp
src/events/: EventManager.hpp  EventManager_tests.cpp
src/exceptions/: ComponentNotRegisteredException.hpp  EntityNotFoundException.hpp
src/pubsub/: ECSEvents.hpp  Event.hpp  EventManager.hpp  PubSub.hpp  eventmanager_tests.cpp
